# junglegenius

./: .gitignore  Cargo.toml  navmesh.json  wave.code-workspace
app/: Cargo.toml  build.rs
app/src/: engine_renderer.rs  main.rs  map_overlay.rs  message.rs  old_main.rs  utils.rs
app/src/display_manager/: mod.rs  pane.rs
app/src/grid/: mod.rs  pane.rs
app/src/information/: card.rs  list.rs  mod.rs
app/src/minimap/: geometry.rs  impls.rs  mod.rs
app/src/render_engine/: debug.rs  mod.rs
app/src/wave/: mod.rs
engine/: Cargo.toml  build.rs  navmesh.json
engine/src/: core.rs  event.rs  lib.rs  mapside.rs  stats.rs
engine/src/ecs/: builder.rs  entity.rs  kind.rs  mod.rs  store.rs
engine/src/ecs/entity/: builder.rs  mod.rs
engine/src/ecs/generic/: mod.rs  pathfinding.rs  position.rs  spawner.rs
engine/src/ecs/spawners/: wave.rs
engine/src/ecs/structures/: inhibitor.rs  mod.rs  nexus.rs  old_inhibitor.rs  old_nexus.rs  old_turret.rs  turret.rs
engine/src/ecs/unit/: mod.rs
engine/src/ecs/units/: minion.rs  mod.rs  old_minion.rs
engine/src/nav_engine/: mod.rs
engine/src/wave/: mod.rs  spawner.rs  waves.rs
libmap/: Cargo.toml
libmap/src/: intextgrouper.rs  lib.rs  main.rs  mapreader.rs  mesh_mapper.rs  parse.rs  sampler.rs  ser.rs  structures.rs
libmap/src/maptri/: cvt.rs  mod.rs  refined.rs  wall.rs
libmap/src/pipe/: chained.rs  mod.rs  split.rs
libmap/src/svg/: mod.rs  parse.rs  reader.rs  sampler.rs
maptri/: Cargo.toml  build.rs
maptri/src/: cvt.rs  lib.rs  main.rs
oobb/: Cargo.toml
oobb/src/: lib.rs
svg2geojson/: Cargo.toml
svg2geojson/src/: lib.rs  main.rs  parse.rs  sampler.rs
