[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = {version = "0.8", features=["canvas", "image"]}
iced_native = { version = "0.9" }
iced_graphics = { version = "0.7" }
engine = { path = "../engine" }
either = { version = "1.8" }
lyon = { version = "1" }
pathfinding = {version="4"}
rstar = {version = "0.10"}