[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = {version = "0.8", features=["canvas", "svg", "tokio"]}
iced_native = { version = "0.9" }
engine = { path = "../engine" }
lyon = { version = "1" }
pathfinding = {version="4"}
rstar = {version = "0.10"}
oobb = {path = "../oobb"}
geo = {version = "0.24"}
geojson = {version = "0.24", features=["geo-types"]}