[package]
name = "engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lyon = { version = "1" }
rstar = {version = "0.10"}
fastrand = {version= "1.9"}
slab = {version="0.4"}
pathfinding = {version="4"}
oobb = {path="../oobb"}
geo = {version = "0.24"}
geojson = {version = "0.24", features=["geo-types"]}
libmap = {path = "../libmap" }
flexbuffers = {version = "2.0"}


serde = {version = "1.0"}
serde_json = {version = "1.0"}

[build-dependencies]
libmap = {path = "../libmap" }