[package]
name = "libmap"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
svg = {version = "0.13"}
lyon_algorithms = {version = "1"}
lyon_geom = {version = "1"}
lyon_path = {version = "1"}
nom = {version = "7"}
geojson = {version = "0.24", features=["geo-types"]}
serde = {version = "1.0", features=["derive"]}
serde_json = {version = "1.0" }
tracing = "0.1"
tracing-subscriber = { version = "0.3.16" }
geo = {version = "0.24"}


oobb = {path="../oobb"}
spade = { git = "https://github.com/Stoeoef/spade.git", branch = "delaunay_refinement", features=["serde"] }
num-traits = {version = "0.2"}
rayon = "1.7.0"
flexbuffers = "2.0.0"
rstar = {version = "0.10"}