[package]
name = "maptri"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
svg2geojson = {path = "../svg2geojson"}
geojson = {version = "0.24", features=["geo-types"]}
geo = {version = "0.24"}

rstar = {version = "0.10"}
oobb = {path="../oobb"}

# spade = {version = "2.1"}
spade = { git = "https://github.com/Stoeoef/spade.git", branch = "delaunay_refinement" }
num-traits = {version = "0.2"}
rayon = "1.7.0"

[build-dependencies]
svg2geojson = {path = "../svg2geojson"}