[package]
name = "svg2geojson"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
svg = {version = "0.13"}
lyon_algorithms = {version = "1"}
lyon_geom = {version = "1"}
lyon_path = {version = "1"}
nom = {version = "7"}
geojson = {version = "0.24", features=["geo-types"]}